# FinalYearProject-purple_filter-main-

./: .gitattributes  README.md  local.properties  pubspec.yaml
.github/workflows/: firebase-hosting-pull-request.yml
android/: CMakeLists.txt
android/app/: build.gradle  google-services.json
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/purple_filter/: MainActivity.kt
android/app/src/prod/: google-services.json
functions/: package-lock.json
ios/: Podfile  firebase_app_id_file.json
ios/Classes/: converter.cpp  converter.h
ios/Flutter/: Debug.xcconfig  Release.xcconfig
ios/Runner/: GoogleService-Info.plist  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner.xcworkspace/: contents.xcworkspacedata
l10n/: en.json  ja.json  zh-Hans.json  zh-Hant.json
lib/: authMain.dart  bookMark.dart  contactUsPage.dart  firebase_options.dart  frame.dart  homePage.dart  loginPage.dart  main.dart  mainUI.dart  qrViewPage.dart  qrcodePage.dart  scanner_screen.dart  scanner_widget.dart  selectLanguagePage.dart  selectModePage.dart  selectUIPage.dart  selectVirusTable.dart  setting.dart  splashScreen.dart  test.dart
lib/Login/: login_screen.dart
lib/Signup/: signup_screen.dart
lib/components/: background.dart
lib/detect_distance/: allocator.dart  convert_image_method_channel.dart  type_definition.dart  (+1 more)
linux/: CMakeLists.txt  my_application.cc
macos/: firebase_app_id_file.json
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+48 files in other folders)
